<resources>
    <string name="app_name">Personal Dictionary</string>
    <string name="hello_message">Hello!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">Loading..</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="dict_main_jump">Jump To Dictionary</string>
    <string name="sign_in_promt">Please sign in with your Google account</string>
    <string name="disconnect">Disconnect</string>
    <string name="create_new_dict">Create dictionary</string>
    <string name="dict_list">Your dictionaries</string>
    <string name="import_dict">Import dictionary</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_info">Login info</string>
    <string name="position_placeholder">Position</string>
    <string name="id_placeholder">ID</string>
    <string name="lang_list">Languages list</string>
    <string name="lang_header">Language</string>
    <string name="lang_short_header">Abbr</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="warning_placeholder">Warning placeholder</string>
    <string name="create_dictionary">Create</string>
    <string name="dictionary_placeholder">Name placeholder</string>
    <string name="filter_button">Filter</string>
    <string name="add_entries_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="export_button">Export</string>
    <string name="search">Search</string>
    <string name="search_status">Status</string>
    <string name="add_status">Status</string>
    <string name="back_button">Back</string>
    <string name="import_info">Fill in the path to import a dictionary</string>
    <string name="import_path">Json dictionary file path</string>
    <string name="import_button">Import</string>
    <string name="import_status">Status</string>
</resources>
