<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jkuklis.personaldictionary.DictionaryImport">

    <TextView
        android:id="@+id/importInfo"
        android:layout_width="290dp"
        android:layout_height="33dp"
        android:text="@string/import_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="57dp"
        app:layout_constraintHorizontal_bias="0.511" />

    <EditText
        android:id="@+id/importPath"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/import_path"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/importInfo" />

    <Button
        android:id="@+id/importButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/importPath" />

    <TextView
        android:id="@+id/importStatus"
        android:layout_width="260dp"
        android:layout_height="76dp"
        android:text="@string/import_status"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/importButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
